TSK-610 BUG - Remove flickering on classification details screen
- Solved bug  which makes classification details screen flickers when selecting a classification of creating a new one.

--- a/web/src/assets/_site.scss
+++ b/web/src/assets/_site.scss
@@ -257,6 +257,12 @@ svg-icon.fa-fw > svg {
     margin-bottom: 30px;
 }
 
+.centered-spinner-whole-screen {
+    position: absolute !important;
+    top: 20vh;
+    left: 42%;
+}
+
 .list-group-item {
     padding: 5px 15px;
 }
